Convert Java to source 7 compatibility for Gradle Tooling API tests